@@ -1,3 +1,8 @@
+2009-11-09  Michal Ludvig  <mludvig@logix.net.nz>
+
+	* buspirate.c: Implemented reset= and speed= extended parameters.
+	* avrdude.1: Document the change.
+
 2009-11-04  Michal Ludvig  <mludvig@logix.net.nz>
 
 	* configure.ac, Makefile.am: Test if GCC accepts -Wno-pointer-sign
